Fixed newsletter button on iOS

--- a/src/css/pages-css/home-css/newsletter.css
+++ b/src/css/pages-css/home-css/newsletter.css
@@ -58,6 +58,7 @@
   background-color: rgb(231, 46, 46);
   color: white;
   font-family: "Titillium Web", sans-serif;
+  -webkit-appearance: none;
 }
 
 /** desktop view **/
